# FastAPI_Framework

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
game_blog/: __init__.py  alembic.ini  db_core.py  main.py  requirements.txt  run.py  site.db
game_blog/apps/authapp/: __init__.py  form.py  models.py  router.py  schemas.py  utils.py
game_blog/apps/error_handlers/: __init__.py  access_denied.py  page_not_found.py  something_wrong.py
game_blog/apps/mainapp/: routes.py
game_blog/apps/posts/: models.py
game_blog/apps/postsapp/: forms.py  models.py  routes.py  schemas.py
game_blog/apps/users/: models.py
game_blog/core/: decorators.py  hashing.py  requests_framework.py
game_blog/database/: session.py
game_blog/database/repository/: users.py
game_blog/main/: routes.py
game_blog/migration/: env.py
game_blog/migration/versions/: 05383757cd5e_second.py  40883050b6f4_third.py  41139348b8b2_fifth.py  931917361d84_fourth.py  e0a76965b162_initial.py
game_blog/post/: models.py
game_blog/setting/: config.py  img_extension.py  setting_core.py
game_blog/static/css/: main.css  style.css
game_blog/static/index/: session_main.js
game_blog/static/js/: auth.js  flickity.pkgd.min.js  jquery.magnific-popup.min.js  lozad.min.js  main.js  update.js
game_blog/templates/: about.html  contact.html  index.jinja2
game_blog/templates/auth/: change_password.jinja2  login.jinja2  register.jinja2  reset_password.jinja2
game_blog/templates/blog/: blog.jinja2  create_post.jinja2  (+2 more)
game_blog/templatest/: index.html
game_blog/users/: models.py
(+10 files in other folders)
