[tool.poetry]
name = "fastapi_framework"
version = "0.1.0"
description = ""
authors = ["Евгений <volga52@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
